--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,17 @@
     "require": {
         "php": "^8.1",
         "doctrine/dbal": "^3.7",
+        "eightynine/filament-excel-import": "^3.0",
         "filament/filament": "3.1",
         "filament/spatie-laravel-media-library-plugin": "3.1",
         "guzzlehttp/guzzle": "^7.2",
+        "konnco/filament-import": "^1.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.3",
         "novadaemon/filament-pretty-json": "^2.0",
+        "pxlrbt/filament-excel": "^2.2",
         "pxlrbt/filament-spotlight": "^1.2",
         "shuvroroy/filament-spatie-laravel-health": "^2.0",
         "spatie/cpu-load-health-check": "^1.0",
