implemented adminpanel access for Admins only. FilamentPHP tweaks such as charts, color, theme, logo, welcome page changed to include logo, api, adminpanel link and document

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "eightynine/filament-excel-import": "^3.0",
         "filament/filament": "3.1",
         "filament/spatie-laravel-media-library-plugin": "3.1",
+        "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
         "konnco/filament-import": "^1.6",
         "laravel/framework": "^10.10",
